--- a/style.css
+++ b/style.css
@@ -30,14 +30,9 @@ button {
   font-family: 'Crete Round', sans-serif;
 }
 
-button.see-project-btn:hover,
-.popup-btn:hover {
+button.see-project-btn:hover {
   background: #fff5e1 !important;
   border: solid 1px #f55800 !important;
-  color: #f55800 !important;
-}
-
-.popup-btn:hover a {
   color: #f55800 !important;
 }
 
@@ -101,7 +96,7 @@ header .mobile-nav {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0px;
+  padding: 0;
   gap: 8px;
   position: absolute;
   width: 100%;
@@ -126,18 +121,16 @@ header .mobile-nav {
   align-items: flex-start;
   padding: 8px;
   justify-content: center;
-
   position: absolute;
   width: 40px;
   height: 40px;
   right: 24px;
   font-size: 32px;
-  color: #67798E;
+  color: #67798e;
   border-radius: 8px;
 }
 
 .mb-item {
-  font-family: 'Inter';
   width: 100%;
   font-style: normal;
   font-weight: 700;
@@ -145,7 +138,7 @@ header .mobile-nav {
   line-height: 44px;
   display: flex;
   align-items: center;
-  color: #FFF5E1;
+  color: #fff5e1;
   padding-left: 24px;
   border-bottom: 1px solid #979493;
 }
@@ -517,7 +510,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
   height: 100%;
 }
 
-.card img {
+.card .image {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -534,7 +527,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
   overflow: hidden;
 }
 
-.categories li {
+.categories .itemCat {
   list-style: none;
   padding: 5px 7px;
   margin-right: 1rem;
@@ -542,7 +535,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
   background-color: rgba(255, 255, 255, 0.24);
 }
 
-.popup .categories li,
+.popup .categories .itemCat,
 .my-work .cards .card-featured.format .categories li {
   font-style: normal;
   font-weight: 500;
@@ -568,14 +561,18 @@ header .nav-menu ul li:not(:last-child) a:hover {
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
-  transition: all .4s linear;
+  transition: all 0.4s linear;
   background-color: #f55800;
   outline: none;
   border: none;
 }
 
-.popup-btn a {
+.popup-btn .anker {
   color: #f8f8f8;
+}
+
+.popup-btn:hover .anker {
+  color: #f55800 !important;
 }
 
 .popup-btn {
@@ -591,6 +588,12 @@ header .nav-menu ul li:not(:last-child) a:hover {
   height: auto;
   margin-top: 20px;
   padding: 10px 15px;
+}
+
+.popup-btn:hover {
+  background: #fff5e1 !important;
+  border: solid 1px #f55800 !important;
+  color: #f55800 !important;
 }
 
 .my-work .cards .card::before {
@@ -623,7 +626,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
   margin-bottom: 0;
 }
 
-.about-me .competence .competence-list li.list-title {
+.about-me .competence .competence-list .list-title {
   position: relative;
   font-style: normal;
   font-weight: 700;
@@ -651,7 +654,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
   position: fixed;
   width: 343px;
   height: fit-content;
-  left: calc(50% - 343px/2);
+  left: calc(50% - 343px / 2);
   top: 30px;
   background: #fff;
   border: 1px solid #dfe1e6;
@@ -682,7 +685,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
   font-weight: 700;
   font-size: 32px;
   line-height: 44px;
-  color: #172B4D;
+  color: #172b4d;
   margin: 0;
   margin-bottom: 30px;
 }
@@ -697,7 +700,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
   width: 100%;
 }
 
-.popup .popup-image img {
+.popup .popup-image .image {
   width: 100%;
   max-height: 250px;
 }
@@ -736,7 +739,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
   background-color: #f55800;
 }
 
-.about-me .competence .competence-list li.list-title::before {
+.about-me .competence .competence-list .list-title::before {
   content: '';
   position: absolute;
   width: 12px;
@@ -888,6 +891,12 @@ header .nav-menu ul li:not(:last-child) a:hover {
     line-height: 43px;
   }
 
+  .about-me .competence .competence-list .list-title {
+    font-weight: 700;
+    font-size: 1.5em;
+    line-height: 44px;
+  }
+
   .headline .social-network ul li:hover {
     transform: scale(1.2);
   }
@@ -988,7 +997,7 @@ header .nav-menu ul li:not(:last-child) a:hover {
     max-height: 380px;
   }
 
-  .categories li {
+  .categories .itemCat {
     list-style: none;
     padding: 5px 7px;
     margin-right: 1rem;
@@ -999,13 +1008,11 @@ header .nav-menu ul li:not(:last-child) a:hover {
   .popup {
     width: 100%;
     max-width: 1200px;
-    left: 0px;
-    right: 0px;
+    left: 0;
+    right: 0;
     top: 50px;
-    bottom: 0px;
+    bottom: 0;
   }
-
-
 
   .popup .popup-image {
     width: 60%;
@@ -1067,14 +1074,6 @@ header .nav-menu ul li:not(:last-child) a:hover {
 
   .popup .categories {
     margin-bottom: 20px;
-  }
-
-  .about-me .competence .competence-list li.list-title {
-    position: relative;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 1.5em;
-    line-height: 44px;
   }
 
   .my-work .works .card:hover {
@@ -1148,17 +1147,6 @@ header .nav-menu ul li:not(:last-child) a:hover {
 
   #about-me .competence .competence-list {
     align-items: flex-start;
-  }
-
-  .about-me .competence .competence-list li.list-title::before {
-    content: '';
-    position: absolute;
-    width: 12px;
-    height: 12px;
-    top: 17px;
-    left: -20px;
-    background: #f55800;
-    transform: rotate(-45deg);
   }
 
   /* ------------- Contact ---------------- */
